[gd_scene load_steps=3 format=3 uid="uid://nmjink44ntmf"]

[ext_resource type="Script" path="res://ui/menu.gd" id="1_a5xk7"]
[ext_resource type="Theme" uid="uid://cje4s55txuuax" path="res://themes/gui_theme.tres" id="1_u3e2m"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_a5xk7")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.262745, 0.262745, 0.262745, 0.694118)

[node name="MainMenu" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 2
theme = ExtResource("1_u3e2m")
alignment = 1

[node name="PauseLabel" type="Label" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "THE GAME HAS BEEN PAUSED"

[node name="ContinueButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_u3e2m")
text = "CONTINUE"

[node name="Retry" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_u3e2m")
text = "Retry"

[node name="SettingButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_u3e2m")
text = "SETTING"

[connection signal="pressed" from="MainMenu/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Retry" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/SettingButton" to="." method="_on_setting_button_pressed"]
